--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -111,117 +111,8 @@
                 </section>
                 <!-- En la sección navbar-menu de tu HTML existente -->
                 <section class="navbar-menu d-flex align-items-center h-100">
-                    <!-- Menú contextual principal -->
-                    <button class="btn btn-outline-light me-2" type="button">
-                        <i class="fa-solid fa-house"></i>
-                    </button>
                     <nav class="context-menu d-flex align-items-center ms-auto">
-                        <ul class="nav nav-pills context-nav-pills">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle"  href="#"  id="capitalHumanoDropdown"  data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fas fa-users me-2"></i>
-                                    Capital Humano
-                                </a>
-                                <ul class="dropdown-menu context-dropdown">
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-user-plus me-2"></i>Trabajadores</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-file-contract me-2"></i>Contratos</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-bell me-2"></i>Verificar Novedades</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-chart-bar me-2"></i>Reportes</a></li>
-                                </ul>
-                            </li>
-                            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" 
-                                href="#" 
-                                id="turnosDropdown" 
-                                role="button" 
-                                data-bs-toggle="dropdown" 
-                                aria-expanded="false">
-                                    <i class="fas fa-clock me-2"></i>
-                                    Turnos
-                                </a>
-                                <ul class="dropdown-menu context-dropdown">
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-calendar-alt me-2"></i>Programación</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-exchange-alt me-2"></i>Intercambios</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-clock me-2"></i>Horarios</a></li>
-                                </ul>
-                            </li>
-                            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" 
-                                href="#" 
-                                id="informesDropdown" 
-                                role="button" 
-                                data-bs-toggle="dropdown" 
-                                aria-expanded="false">
-                                    <i class="fas fa-chart-line me-2"></i>
-                                    Informes
-                                </a>
-                                <ul class="dropdown-menu context-dropdown">
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-user-check me-2"></i>Asistencia</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-trendning-up me-2"></i>Productividad</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-calendar-week me-2"></i>Tiempo trabajado</a></li>
-                                </ul>
-                            </li>
-                            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" 
-                                href="#" 
-                                id="gestionDropdown" 
-                                role="button" 
-                                data-bs-toggle="dropdown" 
-                                aria-expanded="false">
-                                    <i class="fas fa-cogs me-2"></i>
-                                    Gestión
-                                </a>
-                                <ul class="dropdown-menu context-dropdown">
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-users-cog me-2"></i>Configuración</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-user-shield me-2"></i>Usuarios</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-building me-2"></i>Empresas</a></li>
-                                </ul>
-                            </li>
-                            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" 
-                                href="#" 
-                                id="documentosDropdown" 
-                                role="button" 
-                                data-bs-toggle="dropdown" 
-                                aria-expanded="false">
-                                    <i class="fas fa-folder me-2"></i>
-                                    Documentos
-                                </a>
-                                <ul class="dropdown-menu context-dropdown">
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-file-alt me-2"></i>Políticas</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-book me-2"></i>Manuales</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-certificate me-2"></i>Certificados</a></li>
-                                </ul>
-                            </li>
-                            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" 
-                                href="#" 
-                                id="perfilDropdown" 
-                                role="button" 
-                                data-bs-toggle="dropdown" 
-                                aria-expanded="false">
-                                    <i class="fas fa-user me-2"></i>
-                                    Mi perfil
-                                </a>
-                                <ul class="dropdown-menu context-dropdown">
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-id-card me-2"></i>Ver perfil</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-edit me-2"></i>Editar perfil</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="fas fa-key me-2"></i>Cambiar contraseña</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item text-danger" href="#"><i class="fas fa-sign-out-alt me-2"></i>Cerrar sesión</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        
-                         
-                       <!-- En tu layout.phtml -->
-
+                        <?= $this->bootstrapNavigation('default') ?>
                   
                         <!-- Botón "Empresa a trabajar" -->
                         <div class="empresa-selector ms-3">
@@ -236,13 +127,6 @@
         </nav>
         <div class="container">
             <?= $this->content ?>
-            <hr>
-            <footer>
-                <p>
-                    &copy; <?= date('Y') ?>
-                    <a href="https://getlaminas.org/">Laminas Project</a> a Series of LF Projects, LLC.
-                </p>
-            </footer>
         </div>
         <?= $this->inlineScript()
             ->prependFile($this->basePath('js/bootstrap.min.js')) ?>
